--- a/APIs/appsettings.json
+++ b/APIs/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaulConnection": "Data Source=LAPTOP-JH71KBAB; Initial Catalog=DB_Zootecnia; User ID= ; Password= "
-    "DefaulConnection": "Data Source=LAPTOP-JH71KBAB; Initial Catalog=DB_Zootecnia; Trusted_Connection=True;",
-    "ConnectionOleDB": "Provider=SQLOLEDB;Data Source=LAPTOP-JH71KBAB;Initial Catalog=DB_Zootecnia;Integrated Security=SSPI;",
-    "ConnectionMySQL": "Server=localhost; Database=world; User=root; Password=adrianurena;"
+    //"DefaulConnection": "Data Source=DS; Initial Catalog=DB; User ID= ; Password= "
+    "DefaulConnection": "Data Source=DS; Initial Catalog=DB; Trusted_Connection=True;",
+    "ConnectionOleDB": "Provider=SQLOLEDB;Data Source=DS;Initial Catalog=DB;Integrated Security=SSPI;",
+    "ConnectionMySQL": "Server=localhost; Database=world; User=root; Password=PASS;"
 
   }
 }
